--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -1,4 +1,20 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: movies
+#
+#  id             :integer          not null, primary key
+#  original_title :string
+#  overview       :text
+#  poster_path    :string
+#  runtime        :integer
+#  status         :string
+#  imdb_id        :integer
+#  tmdb_id        :integer
+#  vote_average   :float
+#  vote_count     :integer
+#  created_at     :datetime         not null
+#  updated_at     :datetime         not null
+#
 
 # This model initially had no columns defined. If you add columns to the
 # model remove the "{}" from the fixture names and add the columns immediately
