--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,6 +7,7 @@
 #  password   :string
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  user_name  :string
 #
 
 # This model initially had no columns defined. If you add columns to the
