--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,6 +8,7 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  user_name  :string
+#  user_color :string
 #
 
 # This model initially had no columns defined. If you add columns to the
